--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,3 @@
 /*  your css code here. If applicable */
+body { background:url(https://www.globalfocusmagazine.com/wp-content/uploads/2020/02/Engaging_with_technology-scaled.jpg) }
+h1 {text-align:center; padding:20px 0; color:#fff;}
